# document-intelligence-pipeline

./: .env.example  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 7b986bbaa911_initial_schema.py
docs/: EXECUTION_PLAN.md  architecture.md  design-decisions.md  failure-modes.md  implementation_plan.md  roadmap.md  security.md
examples/: run_demo.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/e2e/: smoke.spec.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChunkViewer.tsx  DemoModeBadge.tsx  DocumentList.tsx  EmptyState.tsx  EntityList.tsx  ErrorBoundary.tsx  ErrorMessage.tsx  IngestResultCard.tsx  LoadingSkeleton.tsx  ProcessingStats.tsx  QuarantineList.tsx  SearchResults.tsx  Sidebar.tsx  StatusBadge.tsx
frontend/src/lib/: api.ts  format.ts  mockData.ts
frontend/src/types/: index.ts
frontend/tests/: setup.ts
frontend/tests/components/: ChunkViewer.test.tsx  DocumentList.test.tsx  IngestResultCard.test.tsx  ProcessingStats.test.tsx  QuarantineList.test.tsx  states.test.tsx  (+1 more)
src/doc_pipeline/: __init__.py  chunkers.py  cleaners.py  config.py  db.py  dedup.py  embeddings.py  entities.py  exporters.py  main.py  metadata.py  models.py  parsers.py  pipeline.py  storage.py  storage_db.py  worker.py
tests/: conftest.py  test_api.py  test_chunkers.py  test_cleaners.py  test_core.py  test_dedup.py  test_embeddings.py  test_entities.py  test_exporters.py  test_metadata.py  test_models.py  test_parsers.py  test_persistence.py  test_pipeline.py  test_storage.py  test_worker.py
(+6 files in other folders)
