[project]
name = "document-intelligence-pipeline"
version = "0.1.0"
description = "Multi-stage document processing pipeline for RAG: parse, clean, chunk, embed, and export"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "sqlalchemy>=2.0.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0.0",
    "pdfplumber>=0.10.0",
    "python-docx>=1.0.0",
    "beautifulsoup4>=4.12.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0"
]
