[project]
name = "document-intelligence-pipeline"
version = "1.0.0"
description = "Multi-stage document processing pipeline for RAG: parse, clean, chunk, dedup, embed, search, and export"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.0",
    "pgvector>=0.2.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
# Heavy parsing/embedding deps are provided by shared-core's [docparse] and
# [embeddings] extras (pymupdf, python-docx, beautifulsoup4, numpy). Install
# them alongside this project via:
#   pip install -e '../shared-core[docparse,embeddings]'
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
